--- a/adivinhacao.html
+++ b/adivinhacao.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        * {
+            text-align: center;
+            padding: 10px;
+            font-size: 30px;
+        }
+    </style>
     <title> Adivinhe o número</title>
 </head>
 <body>
     <h1>Teste</h1>
     <button id="chute" onclick="tentativa()"> CHUTE UM NÚMERO</button>
+    <button id="reinicio" onclick="limpar()">Reiniciar</button>
     <section id="resultado"></section>
+
+
     <script>
 let campo = document.querySelector('section#resultado');
 let correto = Math.floor(Math.random() * 100) + 1;
@@ -16,14 +26,36 @@ let correto = Math.floor(Math.random() * 100) + 1;
 
 function tentativa() {
     vez = Number(window.prompt('Qual é o seu palpite?'));
+
+    if(isNaN(vez)) {
+        alert("utilize um número");
+        return;
+    }
+    else if(!Number.isInteger(vez)) {
+        alert("Utilize um número inteiro");
+        return;
+    }
+    else if( vez < 1 || vez > 100) {
+        alert("O número sortido está entre 1 e 100, tente novamente.");
+        return;
+    }
+
+
     if (vez < correto) {
-        campo.innerHTML += `<p>Você falou ${vez}. Meu número é <strong>MAIOR</strong>!</p>`;
+        campo.innerHTML += `<p>Você chutou <strong>${vez}</strong>. O número é <strong>MAIOR</strong>!</p>`;
     } else if (vez > correto) {
-        campo.innerHTML += `<p>Você falou ${vez}. Meu número é <strong>MENOR</strong>!</p>`;
+        campo.innerHTML += `<p>Você chutou <strong>${vez}</strong>. O número é <strong>MENOR</strong>!</p>`;
     } else if (vez == correto) {
         campo.innerHTML += `<p><strong>PARABÉNS!</strong> Você acertou! O valor sorteado era ${correto}!</p>`;
-        document.querySelector("button").style.visibility = 'hidden';
+        document.querySelector("button#chute").style.visibility = 'hidden';
     }
+
+}
+function limpar() {
+    correto = Math.floor(Math.random() * 100) + 1;
+    
+    document.querySelector("button#chute").style.visibility = 'visible';
+    campo.innerHTML = '';
 }
     </script>
 </body>
