--- a/fatorial.html
+++ b/fatorial.html
@@ -31,7 +31,7 @@
 
         function conta() {
             const sessao = document.querySelector('section#campo');
-            valor = parseFloat(document.getElementById('fatorial').value);
+            valor = parseInt(document.getElementById('fatorial').value);
             if(isNaN(valor))
             {
                 alert("Insira valores válidos.");
