--- a/par.html
+++ b/par.html
@@ -35,8 +35,8 @@
 
     <script>
         function teste() {
-            var numero1 = parseFloat(document.getElementById('numero1').value);
-            var numero2 = parseFloat(document.getElementById('numero2').value);
+            var numero1 = parseInt(document.getElementById('numero1').value);
+            var numero2 = parseInt(document.getElementById('numero2').value);
 
             if (isNaN(numero1) || isNaN(numero2)) {
                 alert('Insira valores válidos(números)');
